<resources>
    <string name="app_name">Grid Music</string>

    <string name="maxGridColumns">20</string>
    <string name="playing">playing&#8230;%1$s</string>
    <string name="paused">&lt;paused&gt;</string>
    <string name="done">DONE</string>
    <string name="nullval">NULL</string>
    <string name="playgrid">PLAY GRID</string>
    <string name="creategrid">CREATE GRID</string>
    <string name="downloadArt">DOWNLOAD COVER ART</string>
    <string name="musicGrid">music grid</string>
    <string name="gridsTag" formatted="false">grids: %1$d</string>

    <!-- special grid identifiers -->
    <string name="gridBlank">grid_blank</string>
    <string name="gridEmpty">grid_empty</string>
    <string name="gridUnknown">grid_unknown</string>

    <!-- playGrid music controls -->
    <string name="skip_rewind">skip_rewind</string>
    <string name="rewind">rewind</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="fastforward">fastforward</string>
    <string name="skip_fastforward">skip_fastforward</string>

    <!-- playGrid settings strings -->
    <string name="settings">settings</string>
    <string name="backArrow">back arrow</string>
    <string name="resetPlayed">Reset played grids.</string>
    <string name="resettingPlayed">Resetting all played grids.</string>
    <string name="oneSong">Play one song per grid.</string>
    <string name="allSongs">Play all songs on each grid.</string>
    <string name="notSupported">This feature is not available in the trial version.</string>
    <string name="information">information</string>
    <string name="loadGrid">Load Grid</string>
    <string name="gridLoaded">Grid loaded</string>
    <string name="gridSaved">Grid saved</string>

    <!-- daily playGrid tips -->
    <string name="tip">Tip :</string>
    <integer name="numPlayTips">9</integer>
    <string name="playTipName">playTip</string>
    <string name="playTip0">Tap the settings icon to see ways to customize your Grid.</string>
    <string name="playTip1">You can choose to play one song per grid or all songs on each grid.</string>
    <string name="playTip2">Tap on any grid to select it to be played next.</string>
    <string name="playTip3">Under settings, you can reset played grids, allowing them to be visited again.</string>
    <string name="playTip4">Long press any grid to toggle it between played / not-played.</string>
    <string name="playTip5">Choose any grid to begin Grid playback on that grid.</string>
    <string name="playTip6">Hit PLAY to start Grid playback on a random grid.</string>
    <string name="playTip7">Grids are greyed out once they have been played, but you can still choose them to be played next.</string>
    <string name="playTip8">Red colored grids indicate an error playing one or more songs on that grid.</string>

    <!-- daily createGrid tips -->
    <integer name="numCreateTips">9</integer>
    <string name="createTipName">createTip</string>
    <string name="createTip0">Long press an item in the grid list to delete it.</string>
    <string name="createTip1">Long press an item on the Grid to remove it from the Grid.</string>
    <string name="createTip2">Tap the settings icon for additional features.</string>
    <string name="createTip3">Under settings, there are options to undelete grids you have deleted.</string>
    <string name="createTip4">Under settings, there are options to combine grids by artist or by album.</string>
    <string name="createTip5">When adding a grid to the Grid, choose an occupied grid to add songs to it.</string>
    <string name="createTip6">Grids in the grid list are sorted by artist, album and track number.</string>
    <string name="createTip7">Duplicate songs (same artist, album and track number) are removed when music is imported.</string>
    <string name="createTip8">Enhance Grid Music by using your favorite app to download album cover art</string>

    <!-- create grid status msgs -->
    <string name="loadingMusic">Loading music&#8230;</string>
    <string name="gridRecovered">Grid recovered</string>
    <string name="allRecovered" formatted="false">Recovered %1$d grid(s)</string>
    <string name="gridCombined" formatted="false">Combined %1$d grid(s)</string>
    <string name="addedSongs" formatted="false">Added %1$d songs(s)</string>
    <string name="numSongs" formatted="false">%1$d song(s)</string>
    <string name="gridDeleted">Grid deleted</string>
    <string name="gridRemoved">Grid removed</string>
    <string name="gridAdded">Grid added</string>
    <string name="validGridName">Please enter a valid Grid name</string>
    <string name="chooseDelete">Please choose a save file to delete</string>
    <string name="fileNotFound">Save file not found</string>
    <string name="errorDeleting">Error deleteing file</string>

    <!-- createGrid settings strings -->
    <string name="undeleteLast">Undelete Last</string>
    <string name="undeleteAll">Undelete All</string>
    <string name="noDelete">No songs have been deleted.</string>
    <string name="combineByArtist">Combine grids by artist</string>
    <string name="combineByAlbum">Combine grids by album</string>
    <string name="saveGrid">Save Grid</string>
    <string name="editGrid">Edit Grid</string>
    <string name="moveGrid">Move Grid</string>
    <string name="deleteSavedGrid">Delete Saved Grid</string>
    <string name="saveGridHint">Grid name</string>
    <string name="cancel">Cancel</string>
    <string name="addMusic">Add music to Grid before saving</string>
    <string name="upArrow">Up Arrow</string>
    <string name="downArrow">Down Arrow</string>
    <string name="leftArrow">Left Arrow</string>
    <string name="rightArrow">Right Arrow</string>
    <string name="closeWindow">Close window</string>

    <!-- Download Art buttons and info msgs -->
    <string name="findAllArt">Find all\ncover art</string>
    <string name="findUnknownArt">Find unknown\ncover art</string>
    <string name="findCoverArt">Find cover art</string>
    <string name="noCoverArt">No cover art found.</string>
    <string name="noInternet">No internet connection.</string>
    <string name="noMusic">No music found.</string>
    <string name="coverArt">Cover Art</string>
    <string name="coversDownloaded" formatted="false">%1$d cover(s) downloaded</string>

    <!-- save data json labels -->
    <string name="savelabelName">Name</string>
    <string name="savelabelRows">Rows</string>
    <string name="savelabelColumns">Columns</string>
    <string name="savelabelGrids">Grids</string>
    <string name="savelabelGridsRow">Row</string>
    <string name="savelabelGridsColumn">Column</string>
    <string name="savelabelGridsCoverart">Coverart</string>
    <string name="savelabelGridsSongs">Songs</string>
    <string name="savelabelGridsSongsName">Name</string>
    <string name="savelabelGridsSongsArtist">Artist</string>
    <string name="savelabelGridsSongsAlbum">Album</string>
    <string name="savelabelGridsSongsTrack">Track</string>
    <string name="savelabelGridsSongsAlbumID">AlbumID</string>
    <string name="savelabelGridsSongsFilepath">Filepath</string>

</resources>
