<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".DownloadArtActivity">

    <ImageView
        android:id="@+id/download_art_BackArrow"
        android:contentDescription="@string/backArrow"
        style="@style/backArrow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/download_art_find_all_art"
            style="@style/mainButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="findAllArt"
            android:text="@string/findAllArt"/>

        <TextView
            android:id="@+id/download_art_find_unknown_art"
            style="@style/mainButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:onClick="findUnknownArt"
            android:text="@string/findUnknownArt"/>
    </LinearLayout>

    <TextView
        android:id="@+id/download_art_num_downloaded"
        style="@style/downloadArtInfoMsg"
        android:gravity="center"
        tools:ignore="SelectableText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/download_art_song_list"
            android:scrollbars="vertical"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/download_art_empty_list"
            style="@style/downloadArtInfoMsg"
            android:visibility="gone"
            android:gravity="center"
            android:text="@string/noMusic"/>
    </RelativeLayout>
</LinearLayout>