<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/playGrid_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/appBG"
        android:padding="@dimen/gridPadding"
        tools:context=".PlayGridActivity">

        <!-- back arrow, artist info and settings icon -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/playGrid_BackArrow"
                android:contentDescription="@string/backArrow"
                style="@style/backArrow"/>

            <TextView
                android:id="@+id/playGrid_MusicText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/myBlue"
                android:textSize="20sp"
                android:layout_margin="@dimen/gridMargin"
                android:layout_toRightOf="@id/playGrid_BackArrow"
                android:lines="1"
                tools:ignore="SelectableText" />

            <ImageView
                android:id="@+id/playGrid_SettingsButton"
                android:contentDescription="@string/settings"
                style="@style/settingsButton"/>

            <ImageView
                android:id="@+id/playGrid_InfoButton"
                android:contentDescription="@string/information"
                android:layout_toLeftOf="@id/playGrid_SettingsButton"
                style="@style/infoButton"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/playGrid_SongText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/myBlue"
            android:textSize="25sp"
            android:gravity="center"
            android:lines="2"
            android:layout_margin="@dimen/gridMargin"
            android:text="@string/app_name" />

        <!-- music play controls -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/playGrid_Control_SkipRewind"
                style="@style/musicControl"
                android:contentDescription="@string/skip_rewind"
                android:src="@drawable/ctrlskiprewind"/>
            <!--<ImageView
                android:id="@+id/control_rewind"
                style="@style/musicControl"
                android:contentDescription="@string/rewind"
                android:src="@drawable/ctrlrewind"/>-->
            <ImageView
                android:id="@+id/playGrid_Control_Stop"
                style="@style/musicControl"
                android:contentDescription="@string/play"
                android:src="@drawable/ctrlstop"/>
            <ImageView
                android:id="@+id/playGrid_Control_Play"
                style="@style/musicControl"
                android:contentDescription="@string/play"
                android:src="@drawable/ctrlplay"/>
            <!--<ImageView
                android:id="@+id/control_fastforward"
                style="@style/musicControl"
                android:contentDescription="@string/fastforward"
                android:src="@drawable/ctrlfastforward"/>-->
            <ImageView
                android:id="@+id/playGrid_Control_SkipFastforward"
                style="@style/musicControl"
                android:contentDescription="@string/skip_fastforward"
                android:src="@drawable/ctrlskipfastforward"/>
        </LinearLayout>

        <!-- the Grid -->
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/playGrid_TheGrid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/playGrid_OptionsDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/dark_bg"
        app:itemTextColor="@drawable/drawer_item_color"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/play_grid_drawer_view"/>

    <android.support.design.widget.NavigationView
        android:id="@+id/playGrid_InstructionsDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        android:background="@drawable/dark_bg"
        app:itemTextColor="@drawable/drawer_item_color"
        app:headerLayout="@layout/drawer_play_info"/>
</android.support.v4.widget.DrawerLayout>