<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cover_art_artist_name"
            style="@style/downloadArtInfoMsg"
            android:layout_width="100dp"
            android:layout_marginRight="8dp"
            tools:ignore="SelectableText" />

        <TextView
            android:id="@+id/cover_art_album_name"
            style="@style/downloadArtInfoMsg"
            tools:ignore="SelectableText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cover_art_device_art"
                android:contentDescription="@string/coverArt"
                style="@style/coverArtView"
                android:src="@drawable/unknown"/>

            <ImageView
                android:id="@+id/cover_art_device_art_checkmark"
                android:contentDescription="@string/coverArt"
                style="@style/coverArtCheckMarkView"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cover_art_download_art"
                android:contentDescription="@string/coverArt"
                style="@style/coverArtView"
                android:visibility="invisible"
                android:src="@drawable/unknown"/>

            <ImageView
                android:id="@+id/cover_art_download_art_checkmark"
                android:contentDescription="@string/coverArt"
                android:visibility="invisible"
                style="@style/coverArtCheckMarkView"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/cover_art_find_art"
                style="@style/mainButton"
                android:text="@string/findCoverArt"/>

            <TextView
                android:id="@+id/cover_art_no_art"
                style="@style/downloadArtRetMsg"
                android:text="@string/noCoverArt"/>

            <TextView
                android:id="@+id/cover_art_no_internet"
                style="@style/downloadArtRetMsg"
                android:text="@string/noInternet"/>

            <ProgressBar
                android:id="@+id/cover_art_progress_bar"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
