<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/createGrid_DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/gridPadding"
        android:background="@color/appBG"
        tools:context=".CreateGridActivity">

        <!-- back arrow, artist info and settings icon -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_margin="4dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/createGrid_BackArrow"
                android:contentDescription="@string/backArrow"
                style="@style/backArrow"/>

            <TextView
                android:id="@+id/createGrid_InfoView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/myBlue"
                android:textSize="20sp"
                android:layout_margin="@dimen/gridMargin"
                android:gravity="center"
                tools:ignore="SelectableText" />

            <ImageView
                android:id="@+id/createGrid_SettingsButton"
                android:contentDescription="@string/settings"
                style="@style/settingsButton"/>

            <ImageView
                android:id="@+id/createGrid_InfoButton"
                android:contentDescription="@string/information"
                android:layout_toLeftOf="@id/createGrid_SettingsButton"
                style="@style/infoButton"/>

        </RelativeLayout>

        <!-- grid details -->
        <ListView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/createGrid_DetailsList"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/gridMargin"
            android:layout_height="100dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/gridPadding">

            <!-- gridList -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/gridPadding">

                <TextView
                    android:id="@+id/createGrid_NumGrids"
                    android:textColor="@color/highlightBlue"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/gridMargin"
                    tools:ignore="SelectableText" />

                <!-- grid list -->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/createGrid_GridList"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>

            <!-- the Grid -->
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/createGrid_TheGrid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical" />

                    <TextView
                        android:id="@+id/createGrid_empty_list"
                        style="@style/downloadArtInfoMsg"
                        android:visibility="gone"
                        android:gravity="center"
                        android:text="@string/noMusic"/>
                </RelativeLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/createGrid_OptionsDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@drawable/dark_bg"
        app:itemTextColor="@drawable/drawer_item_color"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/create_grid_drawer_view"/>

    <android.support.design.widget.NavigationView
        android:id="@+id/createGrid_InstructionsDrawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true"
        android:background="@drawable/dark_bg"
        app:itemTextColor="@drawable/drawer_item_color"
        app:headerLayout="@layout/drawer_create_info"/>
</android.support.v4.widget.DrawerLayout>